# contract-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ocr-review.yml
contract_agent/: cli.py  main.py  models.py  report.py  rules.py  service.py
contract_agent/agent_rpc/: Dockerfile  agent_pb2.py  agent_pb2_grpc.py  gen_proto.sh  server.py
contract_agent/agents/: __init__.py  editor.py  reviewer.py  workers.py
contract_agent/config/: __init__.py  config_app.py  config_loader.py  config_model.py  config_model_store.py  config_multiagent.py  config_parser.py  config_provider.py  config_retrieval.py  config_runtime.py
contract_agent/constants/: agent_prompts.py  prompts.py
contract_agent/core/: config.py
contract_agent/db/: __init__.py  init_db.py  models.py  multi_agent_models.py  session.py
contract_agent/interfaces/: __init__.py  cli.py  console.py  console_bridge.py  console_paths.py  http.py
docs/: architecture.md  claude-code-internal-agent-communication-method.md  config-yaml-unification-design.md  multiagent-runtime-refactor-design.md
knowledge/: README.md
proto/: agent.proto
tests/: test_agent_rpc_servicer.py  test_architecture_packages.py  test_audit_logger.py  test_cli.py  test_cli_demo.py  test_config_package.py  test_interfaces.py  test_knowledge_persistence.py  test_llm_provider.py  test_memory_persistence.py  test_model_config.py  test_orchestration_gateway.py  test_orchestration_runtime.py  test_orchestration_supervisor.py  test_package_boundaries.py  test_project_scaffolding.py  test_rag_eval_config_injection.py  test_rag_retriever_e2e.py  test_readme_architecture.py  test_removed_legacy_paths.py  test_report.py  test_reranker.py  test_review_package_compatibility.py  test_rules.py  test_runtime_config.py  test_runtime_database.py  test_runtime_rulesets_compatibility.py  test_runtime_schema.py  test_service.py  test_service_config_injection.py  test_trace_tokens.py  test_vector_store_config_injection.py
(+255 files in other folders)
