[project]
name = "contract-agent"
version = "0.1.0"
description = "Independent contract review agent runtime extracted from context-verify-agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "python-docx==1.2.0",
  "pypdf==5.9.0",
  "langchain==0.3.27",
  "langchain-core==0.3.76",
  "langchain-community==0.3.27",
  "langchain-openai==0.3.32",
  "langgraph==0.2.60",
  "openai==1.101.0",
  "pymilvus==2.5.8",
  "psycopg[binary]==3.2.9",
  "sqlalchemy==2.0.43",
  "alembic==1.16.5",
  "grpcio==1.66.2",
  "grpcio-tools==1.66.2",
  "mammoth==1.12.0",
  "redis==5.0.8",
  "pydantic==2.11.7",
]

[project.scripts]
contract-agent = "contract_agent.interfaces.cli:main"
contract-agent-grpc = "contract_agent.agent_rpc.server:serve"

[tool.setuptools.packages.find]
include = ["contract_agent*"]
