[project]
name = "contract-agent"
version = "0.1.0"
description = "Independent contract review agent runtime extracted from context-verify-agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "python-docx==1.2.0",
  "pypdf==5.9.0",
  "langchain==0.3.27",
  "langchain-core==0.3.76",
  "langchain-community==0.3.27",
  "langchain-openai==0.3.32",
  "langgraph==0.2.60",
  "openai==1.101.0",
  "pymilvus==3.0.0",
  "psycopg[binary]==3.2.9",
  "sqlalchemy==2.0.43",
  "alembic==1.16.5",
  "grpcio==1.81.1",
  "grpcio-tools==1.81.1",
  "mammoth==1.12.0",
  "redis==5.0.8",
  "pydantic==2.11.7",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.18",
]

[project.scripts]
contract-agent = "contract_agent.interfaces.cli:main"
contract-agent-grpc = "contract_agent.agent_rpc.server:serve"

[tool.setuptools.packages.find]
include = ["contract_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"contract_agent/agent_rpc/agent_pb2*.py" = ["F401", "F541"]
